--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             <version>4.10.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.18.1</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.testng</groupId>
